--- a/M1-Python/06. Numpy/py1.ipynb
+++ b/M1-Python/06. Numpy/py1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "01ff241f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "4212b05b",
    "metadata": {
     "deletable": false,
@@ -57,17 +57,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.000986178139686933 0.988211465312899\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 point\n",
-    "sol1 = 0\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "sol1 = np.random.random(size=(10,10))\n",
+    "print(np.min(sol1), np.max(sol1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "713f2818",
    "metadata": {
     "deletable": false,
@@ -84,19 +91,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AssertionError",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-7a880fa73fd9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0msol1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert sol1.shape == (10,10)"
    ]
@@ -111,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bc7d9773",
    "metadata": {
     "deletable": false,
@@ -129,10 +124,8 @@
    "outputs": [],
    "source": [
     "#1 points\n",
-    "sol2 = 0\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "sol2 = np.ones((5,5))\n",
+    "sol2[1:-1, 1:-1] = 0\n"
    ]
   },
   {
@@ -179,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "99620de8",
    "metadata": {
     "deletable": false,
@@ -197,10 +190,9 @@
    "outputs": [],
    "source": [
     "#2 points\n",
-    "sol3 = 0\n",
+    "sol3 = np.arange('2016-07', '2016-08', dtype='datetime64[D]')\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2156ebee",
    "metadata": {
     "deletable": false,
@@ -256,11 +248,10 @@
    "outputs": [],
    "source": [
     "#2 points\n",
-    "sol41 = 0\n",
-    "sol42 = 0\n",
-    "comparisson = 0\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "sol41 = np.random.random(size=(10,10))\n",
+    "sol42 = np.random.random(size=(10,10))\n",
+    "comparisson = np.array_equal(sol41,sol42)\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
@@ -430,7 +421,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('NLP': conda)"
+   "display_name": "Python 3.8.10 64-bit ('mynewenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -442,10 +433,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "interpreter": {
-   "hash": "c2ad988b83bc3032ab0bc6c9b326315d9b3145f093b7c28f6f9e14e1089dbd73"
+   "hash": "7d6121a23a4048d8a7a11f93f07840b870ae7d038dbb65fbcf822b011c54204d"
   }
  },
  "nbformat": 4,
