--- a/M1-Python/07. Pandas/100-pandas-puzzles.ipynb
+++ b/M1-Python/07. Pandas/100-pandas-puzzles.ipynb
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 168,
    "metadata": {
     "collapsed": true
    },
@@ -828,16 +828,16 @@
      "data": {
       "text/plain": [
        "          0         1         2\n",
-       "0  0.144278  0.321909 -0.466186\n",
-       "1 -0.050649  0.059682 -0.009033\n",
-       "2 -0.076372  0.388796 -0.312424\n",
-       "3 -0.078861  0.213172 -0.134311\n",
-       "4 -0.061605 -0.206173  0.267778"
+       "0  0.295348 -0.123042 -0.172307\n",
+       "1  0.056015  0.031022 -0.087037\n",
+       "2 -0.262015  0.370080 -0.108065\n",
+       "3 -0.294383 -0.120270  0.414653\n",
+       "4  0.358497  0.163621 -0.522118"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.144278</td>\n      <td>0.321909</td>\n      <td>-0.466186</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-0.050649</td>\n      <td>0.059682</td>\n      <td>-0.009033</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.076372</td>\n      <td>0.388796</td>\n      <td>-0.312424</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.078861</td>\n      <td>0.213172</td>\n      <td>-0.134311</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.061605</td>\n      <td>-0.206173</td>\n      <td>0.267778</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.295348</td>\n      <td>-0.123042</td>\n      <td>-0.172307</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.056015</td>\n      <td>0.031022</td>\n      <td>-0.087037</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.262015</td>\n      <td>0.370080</td>\n      <td>-0.108065</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.294383</td>\n      <td>-0.120270</td>\n      <td>0.414653</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.358497</td>\n      <td>0.163621</td>\n      <td>-0.522118</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 168
     }
    ],
    "source": [
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -868,16 +868,16 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.8967326095219391"
+       "'g'"
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 84
     }
    ],
    "source": [
     "df = pd.DataFrame(np.random.random(size=(5, 10)), columns=list('abcdefghij'))\n",
-    "min(df.sum())"
+    "df.sum().idxmin()"
    ]
   },
   {
@@ -889,12 +889,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 85
+    }
+   ],
+   "source": [
+    "len(df.drop_duplicates(keep=False))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -909,11 +922,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "    1    2    3    4    5    6   7    8    9    10\n0  NaN  NaN  NaN  1.0  1.0  1.0   1  1.0  1.0  1.0\n1  2.0  2.0  2.0  NaN  2.0  NaN   2  NaN  2.0  NaN\n2  NaN  3.0  NaN  3.0  NaN  3.0   3  3.0  3.0  3.0\n3  4.0  NaN  4.0  NaN  4.0  NaN   4  NaN  4.0  4.0\n4  5.0  5.0  5.0  NaN  5.0  NaN   5  NaN  NaN  5.0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    3\n",
+       "1    8\n",
+       "2    5\n",
+       "3    6\n",
+       "4    8\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 114
+    }
+   ],
    "source": [
     "data = {\n",
     "1:[np.nan,2,np.nan,4,5],\n",
@@ -925,7 +961,11 @@
     "7:[1,2,3,4,5],\n",
     "8:[1,np.nan,3,np.nan,np.nan],\n",
     "9:[1,2,3,4,np.nan],\n",
-    "10:[1,np.nan,3,4,5]}"
+    "10:[1,np.nan,3,4,5]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n",
+    "(df.isnull().cumsum(axis=1) == 3).idxmax(axis=1)"
    ]
   },
   {
@@ -943,12 +983,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1     345\n",
+       "7      52\n",
+       "0      12\n",
+       "12     57\n",
+       "8      54\n",
+       "4      45\n",
+       "10    235\n",
+       "14     87\n",
+       "9      23\n",
+       "Name: vals, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 167
+    }
+   ],
+   "source": [
+    "\n",
+    "df = pd.DataFrame({'grps': list('aaabbcaabcccbbc'), \n",
+    "                   'vals': [12,345,3,1,45,14,4,52,54,23,235,21,57,3,87]})\n",
+    "                \n",
+    "# df.groupby('grps')['vals'].nlargest(3).sum()\n",
+    "\n",
+    "df.groupby('grps')['vals'].nlargest(3).sum(level=1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
