--- a/M1-Python/07. Pandas/py2.ipynb
+++ b/M1-Python/07. Pandas/py2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7ff03cbd",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "21a12243",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "109a33e5",
    "metadata": {
     "deletable": false,
@@ -93,12 +93,12 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "df.loc['f', 'age'] = 1.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "73e90086",
    "metadata": {
     "deletable": false,
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "513ddcc9",
    "metadata": {
     "deletable": false,
@@ -148,12 +148,12 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "df = df.sort_values(by=['age', 'visits'], ascending=[False, True])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c214a859",
    "metadata": {
     "deletable": false,
@@ -177,7 +177,7 @@
     "    if df['age'].values[i] < df['age'].values[i+1]:\n",
     "        b = False\n",
     "        break\n",
-    "    \n",
+    "\n",
     "assert b\n",
     "    "
    ]
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "f8f543b2",
    "metadata": {
     "deletable": false,
@@ -212,10 +212,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "          0         1         2\n",
+       "0 -0.548887  0.309539  0.239347\n",
+       "1 -0.249514  0.011134  0.238379\n",
+       "2 -0.238216  0.019408  0.218808\n",
+       "3 -0.130938  0.126266  0.004673\n",
+       "4  0.312649 -0.235755 -0.076894"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-0.548887</td>\n      <td>0.309539</td>\n      <td>0.239347</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-0.249514</td>\n      <td>0.011134</td>\n      <td>0.238379</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.238216</td>\n      <td>0.019408</td>\n      <td>0.218808</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.130938</td>\n      <td>0.126266</td>\n      <td>0.004673</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.312649</td>\n      <td>-0.235755</td>\n      <td>-0.076894</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "df = pd.DataFrame(np.random.random(size=(5, 3)))\n",
+    "df.sub(df.mean(axis=1), axis=0)\n"
    ]
   },
   {
@@ -259,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "49be51c9",
    "metadata": {
     "deletable": false,
@@ -277,12 +294,13 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "df = pd.DataFrame(np.random.random(size=(5, 10)), columns=list('abcdefghij'))\n",
+    "idx = df.sum().idxmin()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "da754e27",
    "metadata": {
     "deletable": false,
@@ -318,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "aed38335",
    "metadata": {
     "deletable": false,
@@ -336,12 +354,26 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "data = {\n",
+    "1:[np.nan,2,np.nan,4,5],\n",
+    "2:[np.nan,2,3,np.nan,5],\n",
+    "3:[np.nan,2,np.nan,4,5],\n",
+    "4:[1,np.nan,3,np.nan,np.nan],\n",
+    "5:[1,2,np.nan,4,5],\n",
+    "6:[1,np.nan,3,np.nan,np.nan],\n",
+    "7:[1,2,3,4,5],\n",
+    "8:[1,np.nan,3,np.nan,np.nan],\n",
+    "9:[1,2,3,4,np.nan],\n",
+    "10:[1,np.nan,3,4,5]}\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "res = (df.isnull().cumsum(axis=1) == 3).idxmax(axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "391018d1",
    "metadata": {
     "deletable": false,
@@ -358,7 +390,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-7419831cb40b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mindexes\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1440\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1441\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1442\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m   1443\u001b[0m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1444\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
    "source": [
     "assert indexes == [3, 8, 5, 6, 8]\n",
     "assert res.shape == (5,)\n",
@@ -381,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "25177de1",
    "metadata": {
     "deletable": false,
@@ -399,12 +444,14 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "df1 = pd.DataFrame({'grps': list('aaabbcaabcccbbc'), \n",
+    "                   'vals': [12,345,3,1,45,14,4,52,54,23,235,21,57,3,87]})\n",
+    "res = df1.groupby('grps')['vals'].nlargest(3).sum(level=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "f3775db4",
    "metadata": {
     "deletable": false,
@@ -427,12 +474,19 @@
     "assert res.values[1] == 156\n",
     "assert res.values[2] == 345"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('NLP': conda)",
-   "name": "python388jvsc74a57bd0c2ad988b83bc3032ab0bc6c9b326315d9b3145f093b7c28f6f9e14e1089dbd73"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('mynewenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -444,7 +498,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
+  },
+  "interpreter": {
+   "hash": "7d6121a23a4048d8a7a11f93f07840b870ae7d038dbb65fbcf822b011c54204d"
   }
  },
  "nbformat": 4,
