--- a/M1-Python/08. Webscrapping/HARD web scraping.ipynb
+++ b/M1-Python/08. Webscrapping/HARD web scraping.ipynb
@@ -26,8 +26,98 @@
  "cells": [
   {
    "source": [
+    "# from selenium import webdriver \n",
+    "# from time import sleep\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# url = \"https://weather.com/weather/tenday/l/San+Francisco+CA?canonicalCityId=dfdaba8cbe3a4d12a8796e1f7b1ccc7174b4b0a2d5ddb1c8566ae9f154fa638c\"\n",
+    "# #my_driver = r\"C:\\Users\\afrah\\OneDrive\\Documents\\01 STRIVE\\chromedriver.exe\" \n",
+    "# driver = webdriver.Chrome(r\"C:\\Users\\afrah\\OneDrive\\Documents\\01 STRIVE\\chromedriver.exe\")\n",
+    "\n",
+    "# driver.get(url)\n",
+    "# sleep(3)\n",
+    "\n",
+    "\n",
+    "# #cookies = driver.find_element_by_xpath('//*[@id=\"truste-consent-button\"]').click()\n",
+    "\n",
+    "# #sleep(4)\n",
+    "\n",
+    "# expand = driver.find_elements_by_class_name('DetailsSummary--daypartName--3C7r4')\n",
+    "# for x in range(len(expand)):\n",
+    "#     if x > 0:\n",
+    "#         driver.execute_script(\"arguments[0].click();\", expand[x])\n",
+    "\n",
+    "# listofdays = []\n",
+    "# alldays = driver.find_elements_by_class_name('DailyContent--daypartName--tJxaZ')\n",
+    "# for d in alldays:\n",
+    "#     listofdays.append(d.text)\n",
+    "\n",
+    "# daytemps = []\n",
+    "# alltemps = driver.find_elements_by_class_name('DailyContent--temp--3VpIL')\n",
+    "# for t in alltemps:\n",
+    "#     daytemps.append(t.text)\n",
+    "\n",
+    "# daydesc = []\n",
+    "# alldescs = driver.find_elements_by_class_name('DailyContent--narrative--1pMJn')\n",
+    "# for d in alldescs:\n",
+    "#     daydesc.append(d.text)\n",
+    "\n",
+    "\n",
+    "# def convert(x):\n",
+    "#     return round(((float(x) - 32) * 5.0/9.0), 2)\n",
+    "\n",
+    "# celsiustemps = []\n",
+    "# for d in daytemps:\n",
+    "#     d = d.replace('°', '')\n",
+    "#     d = convert(d)\n",
+    "#     d = str(d) + '°'\n",
+    "#     celsiustemps.append(d)\n",
+    "\n",
+    "# dict = {\n",
+    "#     'Day': listofdays,\n",
+    "#     \"High/Low Temp in °F\": daytemps,\n",
+    "#     'High/Low Temp in °C': celsiustemps,\n",
+    "#     'Weather Description': daydesc\n",
+    "#     }\n",
+    "\n",
+    "# df = pd.DataFrame(dict)\n",
+    "# print(df)\n",
+    "    \n",
+    "# #expand = driver.find_elements_by_class_name('DaypartDetails--DetailSummaryContent--3hfzd Disclosure--SummaryDefault--2EbAP').click()"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 80,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "               Day High/Low Temp in °F High/Low Temp in °C  \\\n0     Thu 08 | Day                 63°              17.22°   \n1   Thu 08 | Night                 52°              11.11°   \n2     Fri 09 | Day                 63°              17.22°   \n3   Fri 09 | Night                 52°              11.11°   \n4     Sat 10 | Day                 65°              18.33°   \n5   Sat 10 | Night                 54°              12.22°   \n6     Sun 11 | Day                 64°              17.78°   \n7   Sun 11 | Night                 54°              12.22°   \n8     Mon 12 | Day                 61°              16.11°   \n9   Mon 12 | Night                 53°              11.67°   \n10    Tue 13 | Day                 59°               15.0°   \n11  Tue 13 | Night                 53°              11.67°   \n12    Wed 14 | Day                 62°              16.67°   \n13  Wed 14 | Night                 53°              11.67°   \n14    Thu 15 | Day                 62°              16.67°   \n15  Thu 15 | Night                 52°              11.11°   \n16    Fri 16 | Day                 62°              16.67°   \n17  Fri 16 | Night                 53°              11.67°   \n18    Sat 17 | Day                 63°              17.22°   \n19  Sat 17 | Night                 53°              11.67°   \n20    Sun 18 | Day                 66°              18.89°   \n21  Sun 18 | Night                 53°              11.67°   \n22    Mon 19 | Day                 69°              20.56°   \n23  Mon 19 | Night                 54°              12.22°   \n24    Tue 20 | Day                 69°              20.56°   \n25  Tue 20 | Night                 54°              12.22°   \n26    Wed 21 | Day                 68°               20.0°   \n27  Wed 21 | Night                 54°              12.22°   \n28    Thu 22 | Day                 68°               20.0°   \n29  Thu 22 | Night                 55°              12.78°   \n\n                                  Weather Description  \n0   Morning clouds will give way to afternoon suns...  \n1   Clear to partly cloudy. Low 52F. Winds SW at 1...  \n2   Mostly sunny skies. High 63F. Winds WSW at 10 ...  \n3   Clear skies with a few passing clouds. Low 52F...  \n4   A few clouds from time to time. High around 65...  \n5   A few clouds overnight. Low 54F. Winds WSW at ...  \n6   A few passing clouds, otherwise generally sunn...  \n7   Generally fair. Low 53F. Winds WSW at 10 to 15...  \n8   Sun and a few passing clouds. High 61F. Winds ...  \n9   Partly cloudy skies. Low 53F. Winds WSW at 10 ...  \n10  Mostly cloudy skies early, then partly cloudy ...  \n11  Partly cloudy in the evening with more clouds ...  \n12  Partly cloudy skies. High 62F. Winds SW at 10 ...  \n13  A few clouds from time to time. Low 53F. Winds...  \n14  Sun and a few passing clouds. High 62F. Winds ...  \n15  Mostly clear. Low 52F. Winds WSW at 10 to 15 mph.  \n16  A few clouds early, otherwise mostly sunny. Hi...  \n17  Partly cloudy. Low 53F. Winds WSW at 10 to 15 ...  \n18  Intervals of clouds and sunshine. High 63F. Wi...  \n19  Generally fair. Low 53F. Winds WSW at 10 to 15...  \n20  Sunshine and clouds mixed. High 66F. Winds W a...  \n21    A few clouds. Low 53F. Winds W at 10 to 15 mph.  \n22  A few clouds from time to time. High 69F. Wind...  \n23  Mainly clear skies. Low 54F. Winds W at 10 to ...  \n24  Sun and a few passing clouds. High 69F. Winds ...  \n25  A few clouds from time to time. Low 54F. Winds...  \n26  Intervals of clouds and sunshine. High 68F. Wi...  \n27  A few clouds from time to time. Low 54F. Winds...  \n28  Sunshine and clouds mixed. High 68F. Winds W a...  \n29  A few clouds from time to time. Low near 55F. ...  \n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "       day        date High in °F  High in °C Low in °F  Low in °C  \\\n0    Today  08/07/2021         64       17.78        71      21.67   \n1   Fri 09  09/07/2021         65       18.33        71      21.67   \n2   Sat 10  10/07/2021         65       18.33        71      21.67   \n3   Sun 11  11/07/2021         64       17.78        71      21.67   \n4   Mon 12  12/07/2021         62       16.67        71      21.67   \n5   Tue 13  13/07/2021         60       15.56        71      21.67   \n6   Wed 14  14/07/2021         63       17.22        71      21.67   \n7   Thu 15  15/07/2021         63       17.22        71      21.67   \n8   Fri 16  16/07/2021         64       17.78        71      21.67   \n9   Sat 17  17/07/2021         64       17.78        71      21.67   \n10  Sun 18  18/07/2021         67       19.44        71      21.67   \n11  Mon 19  19/07/2021         70       21.11        71      21.67   \n12  Tue 20  20/07/2021         71       21.67        71      21.67   \n13  Wed 21  21/07/2021         71       21.67        71      21.67   \n14  Thu 22  22/07/2021         71       21.67        71      21.67   \n\n             Weather  \n0   AM Clouds/PM Sun  \n1       Mostly Sunny  \n2       Mostly Sunny  \n3       Mostly Sunny  \n4       Mostly Sunny  \n5      Partly Cloudy  \n6       Mostly Sunny  \n7       Mostly Sunny  \n8       Mostly Sunny  \n9      Partly Cloudy  \n10      Mostly Sunny  \n11     Partly Cloudy  \n12      Mostly Sunny  \n13      Mostly Sunny  \n14      Mostly Sunny  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "from selenium import webdriver \n",
     "from time import sleep\n",
+    "import pandas as pd\n",
+    "import datetime  \n",
+    "from datetime import timedelta  \n",
     "\n",
     "url = \"https://weather.com/weather/tenday/l/San+Francisco+CA?canonicalCityId=dfdaba8cbe3a4d12a8796e1f7b1ccc7174b4b0a2d5ddb1c8566ae9f154fa638c\"\n",
     "#my_driver = r\"C:\\Users\\afrah\\OneDrive\\Documents\\01 STRIVE\\chromedriver.exe\" \n",
@@ -36,43 +126,77 @@
     "driver.get(url)\n",
     "sleep(3)\n",
     "\n",
+    "expand = driver.find_element_by_class_name('DetailsSummary--daypartName--3C7r4')\n",
+    "driver.execute_script(\"arguments[0].click();\", expand)\n",
+    "\n",
     "listofdays = []\n",
+    "today = driver.find_element_by_xpath('//*[@id=\"detailIndex0\"]/div/div[1]/h3/span')\n",
+    "#listofdays.append(today.text)\n",
+    "alldays = driver.find_elements_by_class_name('DetailsSummary--daypartName--3C7r4')\n",
+    "for d in alldays:\n",
+    "    listofdays.append(d.text)\n",
     "\n",
-    "cookies = driver.find_element_by_xpath('//*[@id=\"truste-consent-button\"]').click()\n",
-    "\n",
-    "sleep(4)\n",
-    "\n",
-    "expand = driver.find_elements_by_class_name('DetailsSummary--daypartName--3C7r4')\n",
-    "for x in expand:\n",
-    "    driver.execute_script(\"arguments[0].click();\", x)\n",
-    "\n",
-    "\n",
-    "#expand = driver.find_elements_by_class_name('DaypartDetails--DetailSummaryContent--3hfzd Disclosure--SummaryDefault--2EbAP').click()"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 58,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# listofdays = []\n",
-    "# expand = driver.find_elements_by_class_name('DaypartDetails--DetailSummaryContent--3hfzd Disclosure--SummaryDefault--2EbAP').click()\n",
+    "newdates = []\n",
+    "def formatdate(x):\n",
+    "    x = x.strftime(\"%d/%m/%Y\")\n",
+    "    newdates.append(x)\n",
+    "today = datetime.date.today()\n",
     "\n",
     "\n",
-    "#driver.execute_script(\"arguments[0].click();\", expand)\n",
-    "# for i in range(len(expand)):\n",
-    "#     expand[1].click()\n",
+    "for i in range(len(listofdays)):\n",
+    "      date = datetime.date.today() + timedelta(days=i)\n",
+    "      formatdate(date)\n",
     "\n",
-    "# daysdate = driver.find_elements_by_class_name('DailyContent--daypartName--tJxaZ')\n",
-    "# for x in daysdate:\n",
-    "#     print(x.text)\n",
-    "\n"
+    "def convert(x):\n",
+    "     return round(((float(x) - 32) * 5.0/9.0), 2)\n",
+    "\n",
+    "hightemps = []\n",
+    "allhightemps = driver.find_elements_by_class_name('DetailsSummary--highTempValue--3neDD')\n",
+    "for h in allhightemps:\n",
+    "    h = h.text\n",
+    "    h = h.replace('°', '')\n",
+    "    hightemps.append(h)\n",
+    "\n",
+    "\n",
+    "celsiustempshigh = []\n",
+    "for d in hightemps:\n",
+    "    celsiustempshigh.append(convert(d))\n",
+    "\n",
+    "lowtemps = []\n",
+    "alllowtemps = driver.find_elements_by_class_name('DetailsSummary--lowTempValue--2wKBA')\n",
+    "for l in alllowtemps:\n",
+    "    l = l.text\n",
+    "    l = l.replace('°', '')\n",
+    "    lowtemps.append(h)\n",
+    "\n",
+    "celsiustempslow = []\n",
+    "for t in lowtemps:\n",
+    "    celsiustempslow.append(convert(t))\n",
+    "\n",
+    "daydesc = []\n",
+    "#descripts = driver.find_elements_by_class_name('DetailsSummary--condition--33r6t')\n",
+    "#descripts = driver.find_elements_by_class_name('DetailsSummary--DetailsSummary--1iOrv DetailsSummary--fadeOnOpen--3M5nm')\n",
+    "i = 0\n",
+    "while True:\n",
+    "    try:\n",
+    "        alldesc = driver.find_element_by_xpath( '//*[@id=\"titleIndex' + str(i) + '\"]/div[2]/span')\n",
+    "        daydesc.append(alldesc.text)\n",
+    "        i += 1\n",
+    "    except:\n",
+    "        break\n",
+    "\n",
+    "dict = {\n",
+    "    'day':listofdays,\n",
+    "    'date':newdates,\n",
+    "    'High in °F':hightemps,\n",
+    "    'High in °C': celsiustempshigh,\n",
+    "    'Low in °F': lowtemps,\n",
+    "    'Low in °C': celsiustempslow,\n",
+    "    'Weather': daydesc\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(dict)\n",
+    "print(df)"
    ]
   },
   {
@@ -80,7 +204,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "seeall = driver.find_element_by_xpath('//*[@id=\"s0-14-11-0-1-2-6-0-2[1]-20[0]-4\"]/button')\n",
+    "seeall."
+   ]
   }
  ]
 }
