--- a/M2-Maths and Stats/D1/exercises/Quiz_0_Lin_Alg.ipynb
+++ b/M2-Maths and Stats/D1/exercises/Quiz_0_Lin_Alg.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:04.065651Z",
@@ -37,38 +37,26 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def add_vectors(u, v):\n",
-    "    \"\"\"\n",
-    "      >>> add_vectors([1, 0], [1, 1])\n",
-    "      [2, 1]\n",
-    "      >>> add_vectors([1, 2], [1, 4])\n",
-    "      [2, 6]\n",
-    "      >>> add_vectors([1, 2, 1], [1, 4, 3])\n",
-    "      [2, 6, 4]\n",
-    "      >>> add_vectors([11, 0, -4, 5], [2, -4, 17, 0])\n",
-    "      [13, -4, 13, 5]\n",
-    "      >>> a = [1, 2, 3]\n",
-    "      >>> b = [1, 1, 1]\n",
-    "      >>> add_vectors(a, b)\n",
-    "      [2, 3, 4]\n",
-    "      >>> a\n",
-    "      [1, 2, 3]\n",
-    "      >>> b\n",
-    "      [1, 1, 1]\n",
-    "    \"\"\"\n",
-    "    pass\n"
+    "  varr = np.array(v)\n",
+    "  uarr = np.array(u)\n",
+    "  return uarr + varr\n",
+    "\n",
+    "v = np.array([1, 2])\n",
+    "v * 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function scalar_mult(s, v) that takes a number, s, and a list, v and returns the [scalar multiple](https://en.wikipedia.org/wiki/Scalar_multiplication) of v by s."
+    "Write a function scalar_mult(s, v) that takes a number, s, and a list, v and returns the [scalar multiple](https://en.wikipedia.org/wiki/Scalar_multiplication) of v by s.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:19.258850Z",
@@ -78,20 +66,7 @@
    "outputs": [],
    "source": [
     "def scalar_mult(s, v):\n",
-    "    \"\"\"\n",
-    "      >>> scalar_mult(5, [1, 2])\n",
-    "      [5, 10]\n",
-    "      >>> scalar_mult(3, [1, 0, -1])\n",
-    "      [3, 0, -3]\n",
-    "      >>> scalar_mult(7, [3, 0, 5, 11, 2])\n",
-    "      [21, 0, 35, 77, 14]\n",
-    "      >>> a = [1, 2, 3]\n",
-    "      >>> scalar_mult(4, a)\n",
-    "      [4, 8, 12]\n",
-    "      >>> a\n",
-    "      [1, 2, 3]\n",
-    "    \"\"\"\n",
-    "    pass"
+    "  return s * np.array(v)"
    ]
   },
   {
@@ -103,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:22.647998Z",
@@ -113,17 +88,8 @@
    "outputs": [],
    "source": [
     "def dot_product(u, v):\n",
-    "    \"\"\"\n",
-    "      >>> dot_product([1, 1], [1, 1])\n",
-    "      2\n",
-    "      >>> dot_product([1, 2], [1, 4])\n",
-    "      9\n",
-    "      >>> dot_product([1, 2, 1], [1, 4, 3])\n",
-    "      12\n",
-    "      >>> dot_product([2, 0, -1, 1], [1, 5, 2, 0])\n",
-    "      0\n",
-    "    \"\"\"\n",
-    "    pass"
+    "  return np.dot(u, v)\n",
+    "\n"
    ]
   },
   {
@@ -142,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:25.891991Z",
@@ -152,32 +118,36 @@
    "outputs": [],
    "source": [
     "def copy_matrix(matrix):\n",
-    "    \"\"\"\n",
-    "      >>> copy_matrix([[1, 2], [3, 4]])\n",
-    "      [[1, 2], [3, 4]]\n",
-    "      >>> copy_matrix([[1, 2, 3], [4, 5, 6]])\n",
-    "      [[1, 2, 3], [4, 5, 6]]\n",
-    "      >>> copy_matrix([[1, 2], [3, 4], [5, 6], [7, 8]])\n",
-    "      [[1, 2], [3, 4], [5, 6], [7, 8]]\n",
-    "      >>> m = [[1, 0, 0], [0, 2, 0], [0, 0, 3]]\n",
-    "      >>> copyofm = copy_matrix(m)\n",
-    "      >>> copyofm\n",
-    "      [[1, 0, 0], [0, 2, 0], [0, 0, 3]]\n",
-    "      >>> for row_num, row in enumerate(copyofm):\n",
-    "      ...     for col_num, col_val in enumerate(row):\n",
-    "      ...         copyofm[row_num][col_num] = 42\n",
-    "      ...\n",
-    "      >>> copyofm\n",
-    "      [[42, 42, 42], [42, 42, 42], [42, 42, 42]]\n",
-    "      >>> m\n",
-    "      [[1, 0, 0], [0, 2, 0], [0, 0, 3]]\n",
-    "    \"\"\"\n",
-    "    pass"
+    "    return np.copy(matrix)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = [[1, 0, 0], [0, 2, 0], [0, 0, 3]]\n",
+    "copyofm = copy_matrix(m)\n",
+    "copyofm\n",
+    "\n",
+    "     >>> m = [[0, 0], [0, 0]]\n",
+    "      >>> add_row(m)\n",
+    "      [[0, 0], [0, 0], [0, 0]]\n",
+    "      >>> n = [[3, 2, 5], [1, 4, 7]]\n",
+    "      >>> add_row(n)\n",
+    "      [[3, 2, 5], [1, 4, 7], [0, 0, 0]]\n",
+    "      >>> n\n",
+    "      [[3, 2, 5], [1, 4, 7]]\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "      \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:28.752996Z",
@@ -187,22 +157,18 @@
    "outputs": [],
    "source": [
     "def add_row(matrix):\n",
-    "    \"\"\"\n",
-    "      >>> m = [[0, 0], [0, 0]]\n",
-    "      >>> add_row(m)\n",
-    "      [[0, 0], [0, 0], [0, 0]]\n",
-    "      >>> n = [[3, 2, 5], [1, 4, 7]]\n",
-    "      >>> add_row(n)\n",
-    "      [[3, 2, 5], [1, 4, 7], [0, 0, 0]]\n",
-    "      >>> n\n",
-    "      [[3, 2, 5], [1, 4, 7]]\n",
-    "    \"\"\"\n",
-    "    pass"
+    "   n = np.shape(matrix)[1]\n",
+    "   z = [0]\n",
+    "   nz = n * z\n",
+    "   return np.vstack([matrix, nz])\n",
+    "\n",
+    "m = [[3, 2, 5], [1, 4, 7]]\n",
+    "add_row(m)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:31.190111Z",
@@ -212,17 +178,14 @@
    "outputs": [],
    "source": [
     "def add_column(matrix):\n",
-    "    \"\"\"\n",
-    "      >>> m = [[0, 0], [0, 0]]\n",
-    "      >>> add_column(m)\n",
-    "      [[0, 0, 0], [0, 0, 0]]\n",
-    "      >>> n = [[3, 2], [5, 1], [4, 7]]\n",
-    "      >>> add_column(n)\n",
-    "      [[3, 2, 0], [5, 1, 0], [4, 7, 0]]\n",
-    "      >>> n\n",
-    "      [[3, 2], [5, 1], [4, 7]]\n",
-    "    \"\"\"\n",
-    "    pass"
+    "    n = np.shape(matrix)[0]\n",
+    "    z = [0]\n",
+    "    nz = n * z\n",
+    "    nz = np.array(nz)\n",
+    "    nz = np.reshape(nz, (n, 1))\n",
+    "    return np.append(matrix, nz, axis=1)\n",
+    "m = [[0, 0], [0, 0]]\n",
+    "add_column(m)"
    ]
   },
   {
@@ -234,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:42.884497Z",
@@ -244,21 +207,7 @@
    "outputs": [],
    "source": [
     "def add_matrices(m1, m2):\n",
-    "    \"\"\"\n",
-    "      >>> a = [[1, 2], [3, 4]]\n",
-    "      >>> b = [[2, 2], [2, 2]]\n",
-    "      >>> add_matrices(a, b)\n",
-    "      [[3, 4], [5, 6]]\n",
-    "      >>> c = [[8, 2], [3, 4], [5, 7]]\n",
-    "      >>> d = [[3, 2], [9, 2], [10, 12]]\n",
-    "      >>> add_matrices(c, d)\n",
-    "      [[11, 4], [12, 6], [15, 19]]\n",
-    "      >>> c\n",
-    "      [[8, 2], [3, 4], [5, 7]]\n",
-    "      >>> d\n",
-    "      [[3, 2], [9, 2], [10, 12]]\n",
-    "   \"\"\"\n",
-    "    pass"
+    "  return np.add(np.array(m1),np.array(m2))"
    ]
   },
   {
@@ -270,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:47.182931Z",
@@ -280,17 +229,7 @@
    "outputs": [],
    "source": [
     "def scalar_mult(s, m):\n",
-    "    \"\"\"\n",
-    "      >>> a = [[1, 2], [3, 4]]\n",
-    "      >>> scalar_mult(3, a)\n",
-    "      [[3, 6], [9, 12]]\n",
-    "      >>> b = [[3, 5, 7], [1, 1, 1], [0, 2, 0], [2, 2, 3]]\n",
-    "      >>> scalar_mult(10, b)\n",
-    "      [[30, 50, 70], [10, 10, 10], [0, 20, 0], [20, 20, 30]]\n",
-    "      >>> b\n",
-    "      [[3, 5, 7], [1, 1, 1], [0, 2, 0], [2, 2, 3]]\n",
-    "    \"\"\"\n",
-    "    pass"
+    "  return np.multiply(s, np.array(m))"
    ]
   },
   {
@@ -302,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:55:52.098971Z",
@@ -312,6 +251,7 @@
    "outputs": [],
    "source": [
     "def row_times_column(m1, row, m2, column):\n",
+    "#didn't do this one \n",
     "    \"\"\"\n",
     "      >>> row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 0)\n",
     "      19\n",
@@ -327,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:56:10.904256Z",
@@ -336,16 +276,9 @@
    },
    "outputs": [],
    "source": [
-    "def matrix_mult(m1, m2):\n",
-    "    \"\"\"\n",
-    "      >>> matrix_mult([[1, 2], [3,  4]], [[5, 6], [7, 8]])\n",
-    "      [[19, 22], [43, 50]]\n",
-    "      >>> matrix_mult([[1, 2, 3], [4,  5, 6]], [[7, 8], [9, 1], [2, 3]])\n",
-    "      [[31, 19], [85, 55]]\n",
-    "      >>> matrix_mult([[7, 8], [9, 1], [2, 3]], [[1, 2, 3], [4, 5, 6]])\n",
-    "      [[39, 54, 69], [13, 23, 33], [14, 19, 24]]\n",
-    "    \"\"\"\n",
-    "    pass"
+    "\n",
+    "def  matrix_mult \n",
+    "#didn't do this one"
    ]
   },
   {
@@ -357,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-07T12:56:20.280054Z",
@@ -367,17 +300,11 @@
    "outputs": [],
    "source": [
     "def transpose(m):\n",
-    "    \"\"\"\n",
-    "     >>> m = [[3, 4, 6]]\n",
-    "     >>> transpose(m)\n",
-    "     [[3], [4], [6]]\n",
-    "     >>> m\n",
-    "     [3, 4, 6]\n",
-    "     >>> m = [[3, 4, 6], [1, 5, 9]]\n",
-    "     >>> transpose(m)\n",
-    "     [[3, 1], [4, 5], [6, 9]]\n",
-    "   \"\"\"\n",
-    "    pass"
+    "  m = np.array(m)\n",
+    "  return m.transpose()\n",
+    "\n",
+    "m = [[3, 4, 6]]\n",
+    "transpose(m)"
    ]
   },
   {
@@ -390,9 +317,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('mynewenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -404,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "varInspector": {
    "cols": {
@@ -434,6 +360,9 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "interpreter": {
+   "hash": "7d6121a23a4048d8a7a11f93f07840b870ae7d038dbb65fbcf822b011c54204d"
   }
  },
  "nbformat": 4,
