--- a/M2-Maths and Stats/D1/exercises/Quiz_1_Lin_Alg.ipynb
+++ b/M2-Maths and Stats/D1/exercises/Quiz_1_Lin_Alg.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do your imports here"
+    "import numpy as np"
    ]
   },
   {
@@ -36,13 +36,21 @@
     "# type a function that given a 3_dimensional vector it is able to calculate its magnitude\n",
     "\n",
     "def magnitude_3(a,b,c):\n",
+    "    v = np.array([a, b, c])\n",
+    "    v_norm = np.linalg.norm(v)\n",
+    "    return v_norm\n",
     "\n",
     "# type a function that given a n_dimensional vector it is able to calculate its magnitude\n",
     "# if you want to try this from python (not jupyter notebook) https://docs.python.org/3/library/argparse.html would be a good addition\n",
     "# if you are doing this from a jupyter notebook only, you can try to prompt the user for an input  \n",
     "\n",
-    "def magnitude_complete(#inputs):\n",
-    "    pass"
+    "def magnitude_complete(arg1, *args):\n",
+    "    v = np.array(arg1)\n",
+    "    for i in args:\n",
+    "        v = np.append(v, [i])\n",
+    "    v_norm = np.linalg.norm(v)\n",
+    "    return v_norm\n",
+    "\n"
    ]
   },
   {
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +87,14 @@
    "outputs": [],
    "source": [
     "def magnitude_vectors(a, b):\n",
-    "    #checks that size is equal\n",
-    "    \n",
-    "    #returns the magnitude\n",
-    "    pass"
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    if np.shape(a)[0] == np.shape(b)[0]:\n",
+    "        newarr = a + b \n",
+    "        v_norm = np.linalg.norm(v)\n",
+    "        return(v_norm)\n",
+    "    else: \n",
+    "        print('Not the same shape')"
    ]
   },
   {
@@ -99,17 +111,29 @@
    "outputs": [],
    "source": [
     "def direction_vectors(a, b):\n",
-    "    #checks that size is equal\n",
-    "    \n",
-    "    #returns the angle. Hint: use the arctan\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    if np.shape(a)[0] == np.shape(b)[0]:\n",
+    "        dot_pr = a.dot(b)\n",
+    "        norms = np.linalg.norm(a) * np.linalg.norm(b)\n",
+    "        return(np.rad2deg(np.arccos(dot_pr / norms)))\n",
+    "    else:\n",
+    "        print('Not the same shape')\n",
+    " \n",
     "    \n",
     "# or if you want to do it all in one batch:\n",
     "def magdir_vectors(a, b):\n",
-    "    #checks that size is equal\n",
-    "    \n",
-    "    #returns the magnitude and direction \n",
-    "    # as alternative, print them in a nicely printed format like:\n",
-    "    #\"The magnitude of a + b is X and the direction is Y\""
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    if np.shape(a)[0] == np.shape(b)[0]:\n",
+    "        newarr = a + b \n",
+    "        v_norm = np.linalg.norm(v)\n",
+    "        (v_norm)\n",
+    "        dot_pr = a.dot(b)\n",
+    "        norms = np.linalg.norm(a) * np.linalg.norm(b)\n",
+    "        direction = np.rad2deg(np.arccos(dot_pr / norms))\n",
+    "        print(\"The magnitude of\", a, b, \"is\", v_norm, \"and the direction is\", direction)\n",
+    "\n"
    ]
   },
   {
@@ -130,9 +154,13 @@
    "outputs": [],
    "source": [
     "def alpha_magnitude(alpha, b):\n",
-    "    \n",
-    "    #returns the resulting magnitude,\n",
-    "    # as alternative, just print it\n"
+    "    ab = alpha * np.array(b)\n",
+    "    norm = np.linalg.norm(ab)\n",
+    "    return norm\n",
+    "\n",
+    "# If α > 0, the direction of the vector will not change\n",
+    "# If α < 0, the direction of the vector will change \n",
+    "# If -1 <α < 1, the magnitude will decrease"
    ]
   },
   {
@@ -147,14 +175,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# If α > 0, the direction of the vector will not change\n",
+    "# If α < 0, the direction of the vector will change \n",
+    "# If -1 <α < 1, the magnitude will decrease"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('mynewenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "varInspector": {
    "cols": {
@@ -196,6 +228,9 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "interpreter": {
+   "hash": "7d6121a23a4048d8a7a11f93f07840b870ae7d038dbb65fbcf822b011c54204d"
   }
  },
  "nbformat": 4,
