--- a/M2-Maths and Stats/Math Cheatsheet.ipynb
+++ b/M2-Maths and Stats/Math Cheatsheet.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "tight-apparatus",
    "metadata": {
     "ExecuteTime": {
@@ -42,18 +42,7 @@
      "start_time": "2021-07-12T06:40:03.924970Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.477225575051661"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "v = np.array([1,2,3,4])\n",
@@ -67,14 +56,36 @@
    "id": "korean-optimization",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "v = np.array(a)\n",
+    "u = np.array([2,4,6,8])\n",
+    "v+u\n"
+   ]
+  },
+  {
+   "source": [
+    "<b>Direction of a vector </b>\n",
+    "$$ tan(θ)=(y_{2} - y_{1})/(x_{2} - x_{1})$$\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "<b> Direction of addition of vectors </b>\n",
+    "\n",
+    "$$ a ⋅ b = |a||b| cos (θ) $$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('mynewenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -86,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "varInspector": {
    "cols": {
@@ -116,6 +127,9 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "interpreter": {
+   "hash": "7d6121a23a4048d8a7a11f93f07840b870ae7d038dbb65fbcf822b011c54204d"
   }
  },
  "nbformat": 4,
